Centered and styled content from nav to bottom of bio. Nav is now below absolute images in header to avoid overlap. // Next need to organise content in bottom of page (Projects, Contact me (w/mailto:) and contact form.

--- a/week-1/assets/style.css
+++ b/week-1/assets/style.css
@@ -3,6 +3,8 @@
     --secondary-color: #333333;
     --background-color: #eeeeee;
     --text-color: #333333;
+
+    --animation-style: all 0.3s ease-in-out;
 }
 
 *{
@@ -10,11 +12,11 @@
     padding: 0;
     box-sizing:border-box;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
 }
 
 /* Element Styles */
 header {
-    position: fixed;
     width: 100%;
     background-color: var(--primary-color);
 }
@@ -27,26 +29,19 @@ body{
 }
 
 main {
-    padding-top: 95px;
+    
 }
 
 section {
     background: #dddddd;
-    padding: 0px;
-    margin-bottom: 20px;
+    padding: 20px 20px 20px 20px;
+    margin-bottom: 0px;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     width: 100%
 }
 
 div {
-    margin-bottom: 15px;
-    padding: 10px;
-    background: #cccccc;
-    margin-bottom: 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    width: 100%;
 }
 
 footer {
@@ -67,15 +62,39 @@ h1 {
 }
 
 h2 {
+    position: relative;
+    background-color: var(--primary-color);
     text-align: center;
     font-style: italic;
-    color: var(--primary-color);
-    margin-bottom: 10px;
+    color: var(--text-color);
+    padding: 10px;
+    width: 250px;
+    align-self: center;
+    border: solid 4px var(--secondary-color);
+    border-radius: 10px;
+    box-shadow: rgba(0,0,0,0.5) 2px 4px 6px;
+}
+
+h3 {
+    text-align: center;
+}
+
+p {
+    text-align: center;
 }
 
 /* Class Styles */
 
+/* Navigation Styles */
+.nav-container {
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    width: 100%;
+}
+
 .navigation {
+    
     list-style-type: none;
     background-color: #333333;
     padding: 0;
@@ -97,6 +116,8 @@ h2 {
     text-align: center;
     padding: 10px 20px;
     text-decoration: none;
+
+    transition: var(--animation-style);
 }
 
 .nav-item a:hover {
@@ -104,9 +125,14 @@ h2 {
     color:var(--primary-color);
 }
 
+
+
 .profile {
     display: inline-flex;
     justify-content: space-evenly;
+    align-items: center;
+    gap: 40px;
+    width: 100%;
 }
 
 .profile h2 {
@@ -122,13 +148,133 @@ h2 {
     box-shadow: rgba(0,0,0,0.5) 2px 4px 6px;
 }
 
+.flip-card {
+    background-color: transparent;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+    perspective: 1000px;
+}
+
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+    box-shadow: rgba(0,0,0,0.5) 2px 4px 6px;
+
+}
+
+.flip-card-back {
+    position: flex;
+    background-color: var(--primary-color);
+    color: var(--text-color); 
+    transform: rotateY(180deg);
+    justify-content: center;
+    border: 4px solid var(--secondary-color);
+    padding-top: 27px;
+}
+
 .profile-picture {
     width: 150px;
     height: 150px;
     border-radius: 50%;
     object-fit: cover;
-    margin: 15px;
     border: 4px solid var(--secondary-color);
     box-shadow: rgba(0,0,0,0.5) 2px 4px 6px;
+}
 
+.div-header {
+    display: inline-flex;
+    justify-content: center;
+    width:100%;
+    margin-bottom: 20px;
+}
+
+.bio {
+    display: inline-flex;
+    justify-content: space-evenly;
+    width:100%;
+    margin-bottom: 20px;
+}
+
+.section-splitter {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+}
+
+.bio .divider {
+    text-align: center;
+    border: solid 2px var(--secondary-color);
+    border-radius: 10px;
+    width:50%;
+    height: 120px;
+    margin:10px;
+    align-content: center;
+    box-shadow: rgba(0,0,0,0.5) 2px 4px 6px;
+}
+
+.divider {
+    text-align: center;
+    border: solid 2px var(--secondary-color);
+    border-radius: 10px;
+    width:fit-content;
+    height:fit-content;
+    padding: 10px;
+    margin:auto;
+    align-content: center;
+    box-shadow: rgba(0,0,0,0.5) 2px 4px 6px;
+}
+
+.hobbies-interests {
+    width:100%;
+}
+
+.hobbies-interests h3 {
+  background-color: var(--primary-color);
+    
+    color: var(--text-color);
+    
+    padding: 10px;
+    text-align: left;
+    margin: auto;
+    width: fit-content;
+    border: solid 4px var(--secondary-color);
+    border-radius: 10px;
+    box-shadow: rgba(0,0,0,0.5) 2px 4px 6px;
+}
+
+.hobby-list {
+    list-style-type: none;
+    padding: 20px 20px 20px 40px;
+    text-align: center;
+    margin: auto;
+    width: 200px;
+    height:fit-content;
+    border: solid 2px var(--secondary-color);
+    border-radius: 10px;
+   
+    padding: 10px;
+    margin:auto;
+    align-content: center;
+    box-shadow: rgba(0,0,0,0.5) 2px 4px 6px;
 }
